feat: time en & ru

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -266,15 +266,392 @@
     },
     "time": {
       "title": "Сроки проведения обязательных профилактических прививок в рамках гарантированного объема медицинской помощи",
-      "link1": {
-        "link": "\tИнфекционные заболевания, против которых прививки проводятся за счет республиканского бюджета:",
-        "content": "<one>Плановые профилактические прививки:</one><two>Возраст прививаемых: 11 лет (девочки)</two><two>Заболевание: Вызванное вирусом папилломы человека</two><two>Возраст прививаемых: 11,5 лет (девочки)</two><two>Заболевание: Вызванное вирусом папилломы человека</two><one>Профилактические прививки по эпидемиологическим показаниям:</one><two>Контингент прививаемых: По эпидемиологическим показаниям</two><two>Заболевание: Коронавирусная инфекция</two>"
-      },
-      "link2": {
-        "link": "\tИнфекционные и паразитарные заболевания, против которых профилактические прививки проводятся за счет средств местных бюджетов:",
-        "content": "<zero>Возраст прививаемых и соответствующие вакцины:</zero><one>1-4 дня:</one><two>Туберкулез,Вирусный гепатит 'В'</two><one>2 месяца:</one><two>Вирусный гепатит 'В', Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b, Пневмококковая инфекция</two><one>3 месяца:</one><two>Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b</two><one>4 месяца:</one><two>Вирусный гепатит 'В', Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b, Пневмококковая инфекция</two><one>12-15 месяцев:</one><two>Полиомиелит, Пневмококковая инфекция, Корь, краснуха, паротит</two><one>18 месяцев:</one><two>Полиомиелит, Коклюш, дифтерия, столбняк, Гемофильная инфекция типа b</two><one>2 года:</one><two>Вирусный гепатит 'А'</two><one>2,5 года:</one><two>Вирусный гепатит 'А'</two><one>6 лет (1 класс):</one><two>Коклюш, дифтерия, столбняк, Корь, краснуха, паротит</two><one>16 лет и через каждые 10 лет:</one><two>Дифтерия, столбняк</two><zero>Профилактические прививки по эпидемиологическим показаниям:</zero><one>Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: медицинские работники:</one><two>Вирусный гепатит B</two><two>Грипп</two><one>Лица, получившие травмы, ранения с нарушением целостности кожных покровов и слизистых:</one><two>Вирусный гепатит B</two><one>Дети, состоящие на динамическом наблюдении в медицинской организации:</one><two>Грипп</two><one>Лица, получившие переливание крови:</one><two>Вирусный гепатит A</two><two>Вирусный гепатит B</two><one>Дети-сироты и дети, оставшиеся без попечения родителей, обучающиеся или воспитывающиеся в организациях для детей-сирот и детей, оставшихся без попечения родителей, а также лица медико-социальных учреждений для престарелых и лиц с инвалидностью:</one><two>Грипп</two><one>По эпидемиологическим показаниям:</one><two>Дифтерия, столбняк</two><two>Корь, краснуха, паротит</two><one>Население, проживающее и работающее в природных очагах инфекционных заболеваний:</one><two>Брюшной тиф</two><two>Весенне-летний клещевой энцефалит</two><two>Сибирская язва</two><one>Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: работники канализационных и очистных сооружений:</one><two>Брюшной тиф</two><one>Сотрудники научно-исследовательских организаций, лабораторий, в том числе персонал, проводящий отбор проб, вивариев, организаций и учреждений, проводящих исследования на наличие возбудителя бешенства и работающих с животными:</one><two>Бешенство</two><one>Лица, выполняющие работу по отлову и содержанию безнадзорных животных:</one><two>Бешенство</two><one>Сотрудники органов охотничьего и лесного хозяйств, егери, работники убойных пунктов (площадок), таксидермисты, кинологи:</one><two>Бешенство</two><one>Сотрудники организаций здравоохранения, участвующих в проведении парентеральных вмешательств больным бешенством, и патологоанатомы:</one><two>Бешенство</two><one>Лица, подвергшиеся укусу или ослюнению любым животным:</one><two>Бешенство</two>"
-      },
-      "data": "<container><link1></link1><link2></link2></container>"
+      "tabs": [
+        "Национальный",
+        "Эпидемиологический "
+      ],
+      "nacLinks": [
+        {
+          "lvl1": "1-4 дня",
+          "lvl2": [
+            {
+              "name": "Туберкулез",
+              "href": "/info/deseases/Туберкулез"
+            },
+            {
+              "name": "Вирусный гепатит 'В'",
+              "href": "/info/deseases/Гепатит B"
+            }
+          ]
+        },
+        {
+          "lvl1": "2 месяца",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит 'В'",
+              "href": "/info/deseases/Гепатит B"
+            },
+            {
+              "name": "Полиомиелит",
+              "href": "/info/deseases/Полиомиелит"
+            },
+            {
+              "name": "Коклюш",
+              "href": "/info/deseases/Коклюш"
+            },
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            },
+            {
+              "name": "Гемофильная инфекция типа b",
+              "href": "/info/deseases/Haemophilus influenzae типа b"
+            },
+            {
+              "name": "Пневмококковая инфекция",
+              "href": "/info/deseases/Пневмококковая инфекция"
+            }
+          ]
+        },
+        {
+          "lvl1": "3 месяца",
+          "lvl2": [
+            {
+              "name": "Полиомиелит",
+              "href": "/info/deseases/Полиомиелит"
+            },
+            {
+              "name": "Коклюш",
+              "href": "/info/deseases/Коклюш"
+            },
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            },
+            {
+              "name": "Гемофильная инфекция типа b",
+              "href": "/info/deseases/Haemophilus influenzae типа b"
+            }
+          ]
+        },
+        {
+          "lvl1": "4 месяца",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит 'В'",
+              "href": "/info/deseases/Гепатит B"
+            },
+            {
+              "name": "Полиомиелит",
+              "href": "/info/deseases/Полиомиелит"
+            },
+            {
+              "name": "Коклюш",
+              "href": "/info/deseases/Коклюш"
+            },
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            },
+            {
+              "name": "Гемофильная инфекция типа b",
+              "href": "/info/deseases/Haemophilus influenzae типа b"
+            },
+            {
+              "name": "Пневмококковая инфекция",
+              "href": "/info/deseases/Пневмококковая инфекция"
+            }
+          ]
+        },
+        {
+          "lvl1": "12-15 месяцев",
+          "lvl2": [
+            {
+              "name": "Полиомиелит",
+              "href": "/info/deseases/Полиомиелит"
+            },
+            {
+              "name": "Пневмококковая инфекция",
+              "href": "/info/deseases/Пневмококковая инфекция"
+            },
+            {
+              "name": "Корь",
+              "href": "/info/deseases/Корь"
+            },
+            {
+              "name": "Краснуха",
+              "href": "/info/deseases/Краснуха"
+            },
+            {
+              "name": "Паротит",
+              "href": "/info/deseases/Эпидемический паротит"
+            }
+          ]
+        },
+        {
+          "lvl1": "18 месяцев",
+          "lvl2": [
+            {
+              "name": "Полиомиелит",
+              "href": "/info/deseases/Полиомиелит"
+            },
+            {
+              "name": "Коклюш",
+              "href": "/info/deseases/Коклюш"
+            },
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            },
+            {
+              "name": "Гемофильная инфекция типа b",
+              "href": "/info/deseases/Haemophilus influenzae типа b"
+            }
+          ]
+        },
+        {
+          "lvl1": "2 года",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит 'А'",
+              "href": "/info/deseases/Гепатит A"
+            }
+          ]
+        },
+        {
+          "lvl1": "2,5 года",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит 'А'",
+              "href": "/info/deseases/Гепатит A"
+            }
+          ]
+        },
+        {
+          "lvl1": "6 лет (1 класс)",
+          "lvl2": [
+            {
+              "name": "Коклюш",
+              "href": "/info/deseases/Коклюш"
+            },
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            },
+            {
+              "name": "Корь",
+              "href": "/info/deseases/Корь"
+            },
+            {
+              "name": "Краснуха",
+              "href": "/info/deseases/Краснуха"
+            },
+            {
+              "name": "Паротит",
+              "href": "/info/deseases/Эпидемический паротит"
+            }
+          ]
+        },
+        {
+          "lvl1": "11 лет (девочки)",
+          "lvl2": [
+            {
+              "name": "Заболевание, вызванное вирусом папилломы человека",
+              "href": "#"
+            }
+          ]
+        },
+        {
+          "lvl1": "11,5 лет (девочки)",
+          "lvl2": [
+            {
+              "name": "Заболевание, вызванное вирусом папилломы человека",
+              "href": "#"
+            }
+          ]
+        },
+        {
+          "lvl1": "16 лет и через каждые 10 лет",
+          "lvl2": [
+            {
+              "name": "Дифтерия",
+              "href": "/info/deseases/Дифтерия"
+            },
+            {
+              "name": "Столбняк",
+              "href": "/info/deseases/Столбняк"
+            }
+          ]
+        }
+      ],
+      "epidLinks": [
+        {
+          "lvl0": "Профилактические прививки по эпидемиологическим показаниям:",
+          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: медицинские работники:",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит B",
+              "href": "/info/deseases/Гепатит B"
+            },
+            {
+              "name": "Грипп",
+              "href": "/info/deseases/Грипп"
+            }
+          ]
+        },
+        {
+          "lvl1": "Лица, получившие травмы, ранения с нарушением целостности кожных покровов и слизистых:",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит B",
+              "href": "/info/deseases/Гепатит B"
+            }
+          ]
+        },
+        {
+          "lvl1": "Дети, состоящие на динамическом наблюдении в медицинской организации:",
+          "lvl2": [
+            {
+              "name": "Грипп",
+              "href": "/info/deseases/Грипп"
+            }
+          ]
+        },
+        {
+          "lvl1": "Лица, получившие переливание крови:",
+          "lvl2": [
+            {
+              "name": "Вирусный гепатит B",
+              "href": "/info/deseases/Гепатит B"
+            }
+          ]
+        },
+        {
+          "lvl1": "Дети-сироты и дети, оставшиеся без попечения родителей, обучающиеся или воспитывающиеся в организациях для детей-сирот и детей, оставшихся без попечения родителей, а также лица медико-социальных учреждений для престарелых и лиц с инвалидностью:",
+          "lvl2": [
+            {
+              "name": "Грипп",
+              "href": "/info/deseases/Грипп"
+            }
+          ]
+        },
+        {
+          "lvl1": "По эпидемиологическим показаниям:",
+          "lvl2": [
+            {
+              "name": "Коронавирусная инфекция",
+              "href": "/info/deseases/COVID-19"
+            },
+            {
+              "name": "Грипп",
+              "href": "/info/deseases/Грипп"
+            },
+            {
+              "name": "Корь",
+              "href": "/info/deseases/Корь"
+            },
+            {
+              "name": "Краснуха",
+              "href": "/info/deseases/Краснуха"
+            },
+            {
+              "name": "Паротит",
+              "href": "/info/deseases/Эпидемический паротит"
+            }
+          ]
+        },
+        {
+          "lvl1": "Население, проживающее и работающее в природных очагах инфекционных заболеваний:",
+          "lvl2": [
+            {
+              "name": "Туляремия",
+              "href": "/info/deseases/Туляремия"
+            },
+            {
+              "name": "Весенне-летний клещевой энцефалит",
+              "href": "/info/deseases/Весенне-летний клещевой энцефалит"
+            },
+            {
+              "name": "Сибирская язва",
+              "href": "/info/deseases/Сибирская язва"
+            }
+          ]
+        },
+        {
+          "lvl1": "Лица, относящиеся к группам риска по роду своей профессиональной деятельности, в том числе: работники канализационных и очистных сооружений:",
+          "lvl2": [
+            {
+              "name": "Брюшной тиф",
+              "href": "/info/deseases/Брюшной тиф"
+            }
+          ]
+        },
+        {
+          "lvl1": "Сотрудники научно-исследовательских организаций, лабораторий, в том числе персонал, проводящий отбор проб, вивариев, организаций и учреждений, проводящих исследования на наличие возбудителя бешенства и работающих с животными:",
+          "lvl2": [
+            {
+              "name": "Бешенство",
+              "href": "/info/deseases/Бешенство"
+            }
+          ]
+        },
+        {
+          "lvl1": "Лица, выполняющие работу по отлову и содержанию безнадзорных животных:",
+          "lvl2": [
+            {
+              "name": "Бешенство",
+              "href": "/info/deseases/Бешенство"
+            }
+          ]
+        },
+        {
+          "lvl1": "Сотрудники органов охотничьего и лесного хозяйств, егери, работники убойных пунктов (площадок), таксидермисты, кинологи:",
+          "lvl2": [
+            {
+              "name": "Бешенство",
+              "href": "/info/deseases/Бешенство"
+            }
+          ]
+        },
+        {
+          "lvl1": "Сотрудники организаций здравоохранения, участвующих в проведении парентеральных вмешательств больным бешенством, и патологоанатомы:",
+          "lvl2": [
+            {
+              "name": "Бешенство",
+              "href": "/info/deseases/Бешенство"
+            }
+          ]
+        },
+        {
+          "lvl1": "Лица, подвергшиеся укусу или ослюнению любым животным:",
+          "lvl2": [
+            {
+              "name": "Бешенство",
+              "href": "/info/deseases/Бешенство"
+            }
+          ]
+        }
+      ]
     },
     "about": {
       "title": "О приложении",
