--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -266,15 +266,395 @@
     },
     "time": {
       "title": "The timing of mandatory preventive vaccinations within the framework of the guaranteed volume of medical care",
-      "link1": {
-        "link": "\tInfectious Diseases for Which Vaccinations Are Provided at the Expense of the Republican Budget:",
-        "content": "<one>Routine Preventive Immunizations:</one><two>Age of Vaccinated Persons:</two><two>11 years old (girls): Vaccination against disease caused by the human papillomavirus.</two><two>11.5 years old (girls): Vaccination against disease caused by the human papillomavirus.</two><one>Prophylactic Vaccinations Based on Epidemiological Indications:</one><two>Population Eligible for Vaccination:</two><two>Coronavirus Infection: Vaccination based on epidemiological indications.</two>"
-      },
-      "link2": {
-        "link": "Infectious and Parasitic Diseases for Which Prophylactic Vaccinations Are Provided at the Expense of Local Budgets:",
-        "content": "<zero>\tRoutine Vaccinations by Age:</zero><one>1-4 Days Old:</one><two>Tuberculosis</two><two>Viral Hepatitis B</two><one>2 Months Old:</one><two>Viral Hepatitis B</two><two>Poliomyelitis</two><two>Whooping Cough, Diphtheria, Tetanus</two><two>Haemophilus Influenzae Type B</two><one>3 Months Old:</one><two>Poliomyelitis</two><two>Whooping Cough, Diphtheria, Tetanus</two><two>Haemophilus Influenzae Type B</two><one>4 Months Old:</one><two>Viral Hepatitis B</two><two>Poliomyelitis</two><two>Whooping Cough, Diphtheria, Tetanus</two><two>Haemophilus Influenzae Type B</two><two>Pneumococcal Infection</two><one>12-15 Months Old:</one><two>Poliomyelitis</two><two>Pneumococcal Infection</two><two>Measles, Rubella, Mumps</two><one>18 Months Old:</one><two>Poliomyelitis</two><two>Whooping Cough, Diphtheria, Tetanus</two><two>Haemophilus Influenzae Type B</two><one>2 Years Old:</one><two>Viral Hepatitis A</two><one>2.5 Years Old:</one><two>Viral Hepatitis A</two><one>6 Years Old:</one><two>Whooping Cough, Diphtheria, Tetanus</two><two>Measles, Rubella, Mumps</two><one>16 Years Old and Every 10 Years Thereafter:</one><two>Diphtheria</two><two>Tetanus</two><two>Prophylactic Vaccinations Based on Epidemiological Indications:</two><zero>\t\tEligible Population and Diseases:</zero><one>Healthcare Workers (due to the nature of their professional activities):</one><two>Viral Hepatitis B</two><two>Influenza</two><one>Individuals Who Have Suffered Injuries or Wounds (with breach of skin/mucous membranes):</one><two>Diphtheria, Tetanus</two><one>Children Under Dynamic Observation in Medical Organizations:</one><two>Measles, Rubella, Mumps</two><one>Individuals Who Have Received Blood Transfusions:</one><two>Viral Hepatitis A</two><two>Viral Hepatitis B</two><one>Orphans, Children Without Parental Care, and Individuals in Medical-Social Institutions (for the elderly and individuals with disabilities):</one><two>Influenza</two><one>Based on Epidemiological Indications:</one><two>Diphtheria, Tetanus</two><two>Measles, Rubella, Mumps</two><zero>\t\tProphylactic Vaccinations for Specific Risk Groups Based on Epidemiological Indications:</zero><zero>\t\tEligible Population and Diseases:</zero><one>Population Residing and Working in Natural Foci of Infectious Diseases:</one><two>Typhoid Fever</two><two>Spring-Summer Tick-Borne Encephalitis</two><two>Anthrax</two><one>Workers in Sewage and Treatment Facilities:</one><two>Typhoid Fever</two><one>Employees of Research Organizations and Laboratories (working with rabies agents or animals):</one><two>Rabies</two><one>Individuals Performing Work on Catching and Keeping Stray Animals:</one><two>Rabies</two><one>Employees of Hunting and Forestry Organizations, Gamekeepers, Slaughterhouse Workers, Taxidermists, Dog Handlers:</one><two>Rabies</two><one>Healthcare Organization Employees (involved in parenteral interventions on rabies patients, pathologists):</one><two>Rabies</two><one>Individuals Bitten or Scratched by Animals:</one><two>Rabies</two>"
-      },
-      "data": "<container><link1></link1><link2></link2></container>"
+      "tabs": [
+        "Национальный",
+        "Эпидемиологический "
+      ],
+      "nacLinks": [
+        {
+          "lvl1": "1-4 days",
+          "lvl2": [
+            {
+              "name": "Tuberculosis",
+              "href": "/info/deseases/Tuberculosis"
+            },
+            {
+              "name": "Viral hepatitis B",
+              "href": "/info/deseases/Hepatitis B"
+            }
+          ]
+        },
+        {
+          "lvl1": "2 months",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis B",
+              "href": "/info/deseases/Hepatitis B"
+            },
+            {
+              "name": "Poliomyelitis",
+              "href": "/info/deseases/Polio"
+            },
+            {
+              "name": "Pertussis",
+              "href": "/info/deseases/Pertussis"
+            },
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            },
+            {
+              "name": "Haemophilus influenzae type b",
+              "href": "/info/deseases/Haemophilus influenzae type b"
+            },
+            {
+              "name": "Pneumococcal infection",
+              "href": "/info/deseases/Pneumococcal infection"
+            }
+          ]
+        },
+        {
+          "lvl1": "3 months",
+          "lvl2": [
+            {
+              "name": "Poliomyelitis",
+              "href": "/info/deseases/Polio"
+            },
+            {
+              "name": "Pertussis",
+              "href": "/info/deseases/Pertussis"
+            },
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            },
+            {
+              "name": "Haemo-philus influenzae type b",
+              "href": "/info/deseases/Haemophilus influenzae type b"
+            }
+          ]
+        },
+        {
+          "lvl1": "4 months",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis B",
+              "href": "/info/deseases/Hepatitis B"
+            },
+            {
+              "name": "Poliomyelitis",
+              "href": "/info/deseases/Polio"
+            },
+            {
+              "name": "Pertussis",
+              "href": "/info/deseases/Pertussis"
+            },
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            },
+            {
+              "name": "Haemophilus influenzae type b",
+              "href": "/info/deseases/Haemophilus influenzae type b"
+            },
+            {
+              "name": "Pneumococcal infection",
+              "href": "/info/deseases/Pneumococcal infection"
+            }
+          ]
+        },
+        {
+          "lvl1": "12-15 months",
+          "lvl2": [
+            {
+              "name": "Poliomyelitis",
+              "href": "/info/deseases/Polio"
+            },
+            {
+              "name": "Pneumococcal infection",
+              "href": "/info/deseases/Pneumococcal infection"
+            },
+            {
+              "name": "Measles",
+              "href": "/info/deseases/Measles"
+            },
+            {
+              "name": "Rubella",
+              "href": "/info/deseases/Rubella"
+            },
+            {
+              "name": "Mumps",
+              "href": "/info/deseases/Mumps"
+            }
+          ]
+        },
+        {
+          "lvl1": "18 months",
+          "lvl2": [
+            {
+              "name": "Poliomyelitis",
+              "href": "/info/deseases/Polio"
+            },
+            {
+              "name": "Pertussis",
+              "href": "/info/deseases/Pertussis"
+            },
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            },
+            {
+              "name": "Haemophilus influenzae type b",
+              "href": "/info/deseases/Haemophilus influenzae type b"
+            }
+          ]
+        },
+        {
+          "lvl1": "2 years old",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis A",
+              "href": "/info/deseases/Hepatitis A"
+            }
+          ]
+        },
+        {
+          "lvl1": "2,5 years old",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis A",
+              "href": "/info/deseases/Hepatitis A"
+            }
+          ]
+        },
+        {
+          "lvl1": "6 years old",
+          "lvl2": [
+            {
+              "name": "Pertussis",
+              "href": "/info/deseases/Pertussis"
+            },
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            },
+            {
+              "name": "Measles",
+              "href": "/info/deseases/Measles"
+            },
+            {
+              "name": "Rubella",
+              "href": "/info/deseases/Rubella"
+            },
+            {
+              "name": "Mumps",
+              "href": "/info/deseases/Mumps"
+            }
+          ]
+        },
+        {
+          "lvl1": "11 years old (girls)",
+          "lvl2": [
+            {
+              "name": "Disease caused by the human papillomavirus",
+              "href": "#"
+            }
+          ]
+        },
+        {
+          "lvl1": "11,5 years old (girls)",
+          "lvl2": [
+            {
+              "name": "Disease caused by the human papillomavirus",
+              "href": "#"
+            }
+          ]
+        },
+        {
+          "lvl1": "16 years and every 10 years",
+          "lvl2": [
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            }
+          ]
+        }
+      ],
+      "epidLinks": [
+        {
+          "lvl1": "Individuals at risk due to the nature of their professional activities, including: healthcare workers:",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis B",
+              "href": "/info/deseases/Hepatitis B"
+            },
+            {
+              "name": "Influenza",
+              "href": "/info/deseases/Flu"
+            }
+          ]
+        },
+        {
+          "lvl1": "Individuals who have suffered injuries or wounds with a breach of skin and mucous membrane integrity:",
+          "lvl2": [
+            {
+              "name": "Diphtheria",
+              "href": "/info/deseases/Diphtheria"
+            },
+            {
+              "name": "Tetanus",
+              "href": "/info/deseases/Tetanus"
+            }
+          ]
+        },
+        {
+          "lvl1": "Children under dynamic observation in a medical organization:",
+          "lvl2": [
+            {
+              "name": "Influenza",
+              "href": "/info/deseases/Flu"
+            }
+          ]
+        },
+        {
+          "lvl1": "Individuals who have received a blood transfusion:",
+          "lvl2": [
+            {
+              "name": "Viral hepatitis B",
+              "href": "/info/deseases/Hepatitis B"
+            }
+          ]
+        },
+        {
+          "lvl1": "Orphans and children left without parental care, studying and/or being raised in educational organizations for orphans and children left without parental care, individuals in medical and social institutions for the elderly, individuals with disabilities:",
+          "lvl2": [
+            {
+              "name": "Influenza",
+              "href": "/info/deseases/Flu"
+            }
+          ]
+        },
+        {
+          "lvl1": "Based on epidemiological indications:",
+          "lvl2": [
+            {
+              "name": "Coronavirus infection",
+              "href": "/info/deseases/COVID-19"
+            },
+            {
+              "name": "Influenza",
+              "href": "/info/deseases/Flu"
+            },
+            {
+              "name": "Measles",
+              "href": "/info/deseases/Measles"
+            },
+            {
+              "name": "Rubella",
+              "href": "/info/deseases/Rubella"
+            },
+            {
+              "name": "Mumps",
+              "href": "/info/deseases/Mumps"
+            }
+          ]
+        },
+        {
+          "lvl1": "Population residing and working in natural foci of infectious diseases:",
+          "lvl2": [
+            {
+              "name": "Tularemia",
+              "href": "/info/deseases/Tularemia"
+            },
+            {
+              "name": "Spring-summer tick-borne encephalitis",
+              "href": "/info/deseases/Spring-summer tick-borne encephalitis"
+            },
+            {
+              "name": "Anthrax",
+              "href": "/info/deseases/Anthrax"
+            }
+          ]
+        },
+        {
+          "lvl1": "Individuals at risk due to the nature of their professional activities, including: workers in sewage and treatment facilities:",
+          "lvl2": [
+            {
+              "name": "Typhoid fever",
+              "href": "/info/deseases/Typhoid"
+            }
+          ]
+        },
+        {
+          "lvl1": "Employees of research organizations, laboratories, including personnel involved in sample collection, vivariums, organizations and institutions conducting research on the presence of rabies agent and working with animals:",
+          "lvl2": [
+            {
+              "name": "Rabies",
+              "href": "/info/deseases/Rabies"
+            }
+          ]
+        },
+        {
+          "lvl1": "Individuals performing work on catching and keeping stray animals:",
+          "lvl2": [
+            {
+              "name": "Rabies",
+              "href": "/info/deseases/Rabies"
+            }
+          ]
+        },
+        {
+          "lvl1": "Employees of hunting and forestry organizations, gamekeepers, workers in slaughterhouses (sites), taxidermists, dog handlers:",
+          "lvl2": [
+            {
+              "name": "Rabies",
+              "href": "/info/deseases/Rabies"
+            }
+          ]
+        },
+        {
+          "lvl1": "Healthcare organization employees involved in conducting parenteral interventions on rabies patients, and pathologists:",
+          "lvl2": [
+            {
+              "name": "Rabies",
+              "href": "/info/deseases/Rabies"
+            }
+          ]
+        },
+        {
+          "lvl1": "Individuals bitten or scratched by any animals:",
+          "lvl2": [
+            {
+              "name": "Rabies",
+              "href": "/info/deseases/Rabies"
+            }
+          ]
+        }
+      ]
     },
     "about": {
       "title": "About",
